# Corral-Scattering-Numerical-Model

./: MSH_Bare_GF.py  MSH_Quasi_1D.py  README.md  pyproject.toml
.github/workflows/: python-tests.yml
corral_framework/: MSH_2D_Library.py  MSH_Analytical_Kernel.py  __init__.py
test/: verify_hybrid_kernel.py
tests/: verify_2D_integration.py  verify_Topo_Ham_1D.py  verify_hybrid_kernel.py  verify_sorting_algorithm.py
