[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "corral_framework"
version = "0.1.0"
description = "A numerical framework for MSH scattering and Topological Hamiltonian calculations"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Ka Ho Wong"}
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib"
]

[tool.setuptools]
packages = ["corral_framework"]
